--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
-
-h1{
-  text-align: center;
-  font-size:30px;
+/*styling the headings in terms of position and size*/
+h1  {
+	color: rgb(17, 5, 58);
+	font-size: 2em;
+	text-align:center;
+}
+h2,p{
+  text-align:center;
 }
 
+.boxed {
+  border: 10px solid rgb(17, 19, 17) ;
+}
+/*the top navigation bar*/
 .topnav {
   color: white;
   text-align: center;
@@ -39,9 +47,9 @@ h1{
   height:10px;
 }
 
-
+/*the footer*/
 .footer {
-  height:30px;
+  height:20px;
   left: 0;
   bottom:0;
   width: 100%;
@@ -50,11 +58,11 @@ h1{
   text-align: center;
   padding:5px;
   margin-bottom: 0%;
-  position:fixed;
-  z-index:100;
+ position:fixed;  
+ 
   
 }
-
+/*styling the table's position*/
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
@@ -62,7 +70,16 @@ table {
   margin-left:10%;
   height:80%;
 }
-
+table2 {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width:20%;
+  margin-right:5%;
+  height:60%;
+  float:right;
+  margin-top:0px;
+}
+/*table data and heading*/
 td, th {
   border: 1px solid #dddddd;
   text-align: left;
@@ -71,7 +88,7 @@ td, th {
 td{
   height:0px;
 }
-
+/*every even row*/
 tr:nth-child(even) {
   background-color: #dddddd;
 }
@@ -85,7 +102,7 @@ h1  {
 a{
   color:inherit;
 }
-.admin a{
+.admin a:link {
   color:rgb(45, 45, 235);
 }
 a:link {
@@ -157,12 +174,16 @@ img.avatar {
     padding: 10px;
     background-color:#f3ebeb;
 }
-
+/*container inside the action card*/
 .container2{
   padding: 10px;
   background-color:#f3ebeb;
   width:70%;
-  margin-left:15%;
+  margin-left:25%;
+  margin-right:25%;
+  padding-right:100px;
+  
+
 }
 
 span.psw {
@@ -197,8 +218,6 @@ span.psw {
     display: grid;
     grid-template-columns: 2fr 9fr 3fr;
     background-color: rgb(250, 246, 248);
-    
-    /* background-image: url("img/conent2.jpg"); */
  }
  
 
@@ -224,7 +243,7 @@ h3{
   position: absolute;
   z-index: 100;
 }
-
+/* how the dropdown will appear*/
 .dropdown .dropbtn {
   font-size: 16px;    
   border: none;
@@ -235,7 +254,7 @@ h3{
   font-family: inherit;
   margin: 0;
 }
-
+/*colour of the links as a pointer hovers over them*/
 .dropdown:hover .dropbtn {
   background-color: rgb(67, 52, 133);
 }
@@ -266,4 +285,23 @@ h3{
 }
 .topnav-right {
   float: left;
+}
+/* the action card*/
+.card{
+  width:50%;
+  margin-left:20%;
+  margin-right:20;
+  background-color: rgba(235, 229, 229, 0.938);
+  border:none;
+   /* Add shadows to create the "card" effect */
+   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+   transition: 0.3s;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
