--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ h1  {
 a{
   color:inherit;
 }
-.admin a:link {
+.admin a{
   color:rgb(45, 45, 235);
 }
 a:link {
@@ -174,16 +174,12 @@ img.avatar {
     padding: 10px;
     background-color:#f3ebeb;
 }
-/*container inside the action card*/
+
 .container2{
   padding: 10px;
   background-color:#f3ebeb;
   width:70%;
   margin-left:25%;
-  margin-right:25%;
-  padding-right:100px;
-  
-
 }
 
 span.psw {
@@ -286,7 +282,7 @@ h3{
 .topnav-right {
   float: left;
 }
-/* the action card*/
+
 .card{
   width:50%;
   margin-left:20%;
